[gd_scene load_steps=5 format=3 uid="uid://q75760mcnusx"]

[ext_resource type="Script" path="res://Scripts/cardDescription.gd" id="1_hl4o5"]

[sub_resource type="LabelSettings" id="LabelSettings_i6ygs"]
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_akwsr"]
font_size = 24
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_asl6v"]
font_size = 32
font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
outline_size = 5
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.580392)

[node name="battleUI" type="CanvasLayer" node_paths=PackedStringArray("Card", "Description", "costAP", "apLabel", "EnemyDescription", "enemyName", "enemyHealth", "enemyBuffs") groups=["UI"]]
script = ExtResource("1_hl4o5")
Card = NodePath("Card")
Description = NodePath("Card/Description")
costAP = NodePath("Card/costAP")
apLabel = NodePath("apLabel")
EnemyDescription = NodePath("EnemyDescription")
enemyName = NodePath("EnemyDescription/Name")
enemyHealth = NodePath("EnemyDescription/Health")
enemyBuffs = NodePath("EnemyDescription/Buffs")

[node name="Card" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 486.0
offset_top = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2

[node name="Description" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_i6ygs")
horizontal_alignment = 1
autowrap_mode = 3

[node name="costAP" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_akwsr")

[node name="apLabel" type="Label" parent="."]
offset_right = 65.0
offset_bottom = 78.0
label_settings = SubResource("LabelSettings_asl6v")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 273.0
offset_top = -1.0
offset_right = -332.0
offset_bottom = 53.0
grow_horizontal = 2
text = "End Turn"

[node name="EnemyDescription" type="Panel" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 528.0
offset_top = -154.0
offset_right = -20.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="EnemyDescription"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="Health" type="Label" parent="EnemyDescription"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -39.0
offset_right = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
vertical_alignment = 1

[node name="Buffs" type="Label" parent="EnemyDescription"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
